# slatron

./: .gitignore  AUTHORS.md  CLAUDE.md  FUNDING.yml  LICENSE  QUICKSTART.md  README.md  slatron-design-doc.md
.github/workflows/: nightly.yml  slatron-site.yml
.jules/: sentinel.md
slatron-node/: Cargo.toml  config.toml  node-config.toml
slatron-node/scripts/: example_capture.rhai
slatron-node/src/: config.rs  heartbeat.rs  main.rs  mpv_client.rs  playback.rs  schedule.rs  screenshot.rs  spot_reel_player.rs  web_capture.rs  websocket_client.rs
slatron-node/src/rhai_engine/: mod.rs  security_test.rs  tests.rs
slatron-node/tools/: package.json  screenshot.js
slatron-server/: Cargo.toml  build.rs  config.toml
slatron-server/data/: snac.onnx
slatron-server/examples/: gen_hash.rs
slatron-server/migrations/2025-01-01-000000_initial/: down.sql  up.sql
slatron-server/migrations/2025-01-01-000001_seeds/: down.sql  up.sql
slatron-server/migrations/2025-02-20-000000_add_is_dj_accessible/: down.sql  up.sql
slatron-server/migrations/2025-12-10-085348-0000_add_transformers_to_content/: down.sql  up.sql
slatron-server/migrations/2025-12-10-090631-0000_add_playback_status_to_nodes/: down.sql  up.sql
slatron-server/migrations/2025-12-10-091751-0000_allow_transformer_script_type/: down.sql  up.sql
slatron-server/migrations/2025-12-10-091817-0000_seed_default_scripts/: down.sql  up.sql
slatron-server/migrations/2025-12-10-093610-0000_seed_global_settings/: down.sql  up.sql
slatron-server/migrations/2025-12-10-101802-0000_seed_global_active_scripts/: down.sql  up.sql
slatron-server/migrations/2025-12-10-220000-0000_add_priority_to_node_schedules/: down.sql  up.sql
slatron-server/migrations/2025-12-12-162200_cleanup_and_unique_scripts/: down.sql  up.sql
slatron-server/migrations/2026-01-06-205913-0000_add_dj_tables/: down.sql  up.sql
slatron-server/migrations/2026-01-06-220400-0000_add_dj_id_to_schedules/: down.sql  up.sql
slatron-server/migrations/2026-01-06-233000-0000_add_dj_id_to_blocks/: down.sql  up.sql
slatron-server/migrations/2026-01-07-154919-0000_add_provider_ids_to_dj_profiles/: down.sql  up.sql
slatron-server/migrations/2026-01-07-165332-0000_add_duration_to_nodes/: down.sql  up.sql
slatron-server/migrations/2026-01-07-181321-0000_add_context_to_nodes/: down.sql  up.sql
slatron-server/migrations/2026-01-07-183120-0000_allow_server_context_script_type/: down.sql  up.sql
slatron-server/migrations/2026-01-07-190208-0000_add_context_script_to_dj_profiles/: down.sql  up.sql
slatron-server/migrations/2026-01-07-191534-0000_change_dj_script_to_multi/: down.sql  up.sql
slatron-server/migrations/2026-01-10-011611-0000_add_talkativeness_to_dj_profiles/: down.sql  up.sql
slatron-server/migrations/2026-01-10-014211-0000_add_provider_category/: down.sql  up.sql
slatron-server/migrations/2026-01-13-194329-0000_add_bumpers_table/: down.sql  up.sql
slatron-server/migrations/2026-01-15-000852-0000_add_bumper_backs/: down.sql  up.sql
slatron-server/migrations/2026-02-07-000000-0000_add_spot_reels/: down.sql  up.sql
slatron-server/migrations/2026-02-07-155300-0000_fix_content_type_check/: down.sql  up.sql
slatron-server/src/: config.rs  db.rs  main.rs  models.rs  schema.rs  seeding.rs
slatron-server/src/api/: auth_api.rs  bumper_api.rs  content_api.rs  dj_api.rs  mod.rs  nodes_api.rs  permissions_api.rs  schedules_api.rs  scripts_api.rs  settings_api.rs  spot_reel_api.rs  users_api.rs
slatron-server/src/auth/: jwt.rs  middleware.rs  mod.rs
slatron-server/src/defaults/bumper_backs/: solid_blue.mlt  solid_grey.mlt  solid_purple.mlt
slatron-server/src/defaults/bumpers/: station_ident.mlt
slatron-server/src/defaults/scripts/: auto_bumpers.rhai  loop_content.rhai  mute_audio.rhai  rss_news.params.json  rss_news.rhai  schedule_context.rhai  start_at_10s.rhai  station_bug.rhai  time_injector.rhai  youtube_loader.rhai
slatron-server/src/rhai_engine/: mod.rs  path_test.rs  security_test.rs
slatron-server/src/services/: ai_service.rs  bumper_service.rs  cleaning_service.rs  dj_dialogue_service.rs  heartbeat_monitor.rs  mod.rs  schedule_service.rs  script_service.rs  tts_cleanup.rs  tts_service.rs
slatron-server/src/services/ai/: anthropic_adapter.rs  gemini_adapter.rs  mod.rs  ollama_adapter.rs  openai_adapter.rs
slatron-server/src/services/tts/: elevenlabs_adapter.rs  gemini_adapter.rs  mod.rs  orpheus_adapter.rs
slatron-server/src/websocket/: mod.rs
slatron-site/: config.toml
slatron-site/content/: _index.md
slatron-site/content/docs/: _index.md  ai-djs.md  bumpers.md  getting-started.md
slatron-site/public/: main.css
slatron-site/sass/: main.scss
slatron-site/templates/: base.html  index.html  page.html  section.html
slatron-ui/: index.html  package-lock.json  package.json  vite.config.ts
slatron-ui/src/: App.tsx  index.css
slatron-ui/src/api/: client.ts  dj.ts  scripts.ts
slatron-ui/src/components/: NodeLogs.tsx
slatron-ui/src/constants/: bumperAssets.ts
slatron-ui/src/pages/: BumpersPage.tsx  ContentPage.tsx  DashboardPage.tsx  DjsPage.tsx  LoginPage.tsx  NodesPage.tsx  SchedulePage.tsx  SchedulesListPage.tsx  ScriptEditorPage.tsx  ScriptsPage.tsx  SettingsPage.tsx  SpotReelEditorPage.tsx  SpotReelsPage.tsx  UsersPage.tsx
utility/: export_snac_onnx.py
(+29 files in other folders)
