[package]
name = "slatron-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.1", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "2.1"
tokio-tungstenite = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
bcrypt = "0.15"
rhai = "1.16"
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
uuid = { version = "1.6", features = ["v4"] }
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
reqwest = "0.11"
